--- a/App/i18n/languages/en.json
+++ b/App/i18n/languages/en.json
@@ -82,6 +82,8 @@
     "addressBook": "Address Book",
     "updateEmailAddress": "Update Email Address",
     "myAccount": "My Account",
-    "settings": "Settings"
+    "settings": "Settings",
+    "searchHeader": "You searched for",
+    "CategoriesHeader": "Categories"
   }
 }
